# twitter-scraper

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  RUN_UPDATE_BASELINE  pyproject.toml  requirements.txt  setup.py
.github/: commitlint.config.js
.github/workflows/: build.yml  changelog.yml  commit-lint.yml  commitlint.yml  run.yml
assets/: diagrams.vsdx
assets/paper/: Analiza širenja informacija na Twitteru.pptx
data/input/: baseline-user-ids.json  latest-load.json  max-tweet-ids.json  missing-user-ids.json  processed-user-ids.json  processed-user-objs.json  processed-user-tweets.json  stop-words-hrv.json
debug/input/: baseline-user-ids.json  missing-user-ids.json  processed-user-ids.json  processed-user-objs.json  processed-user-tweets.json  stop-words-hrv.json
debug/logs/: 2022-10-15.json
docs/source/: conf.py  index.rst  methods.rst  reference.rst
input/: 2022-02-01_processed-user-ids.json  baseline-user-ids.json  locations.json  locations.txt  missing-user-ids.json  processed-user-ids.json  processed-user-objs.json  processed-user-tweets.json
input/2022-02-04/: 100008186.json  1000851384370155520.json  1012138788.json  1013687402215374848.json  1015743940073488389.json  10488632.json  1063125098.json  1064491685881806848.json  1073612844.json  1083966324.json  1084229268.json  110101080.json  110363167.json  1106378839.json  1114199213779320832.json  112068712.json  1123616211210833921.json  1132064326146244608.json  113901790.json  1142294702.json  1143604465.json  114688719.json  1151337990.json  1153565401.json  115606100.json  1161297972.json  116261175.json  (+491 more)
meta/: tweet.json  tweet.py  user.py
notebooks/: CleanAnalysis.ipynb  DataValidation.ipynb  GraphAnalysis.ipynb  GraphAnalysyis.ipynb  Model.ipynb  README.md  RetweetsAnalysis.ipynb  TweetsTextAnalysis.ipynb  UserTweets.ipynb  Users.ipynb  UsersInfo.ipynb  WorkflowStats.ipynb  adhoc.ipynb  correlation-matrix.tex  descriptive-statistics.tex  hashtags.ipynb  old_tweets.ipynb  preproc.py  rd-PapersAnalysis.ipynb  tweets-by-month.eps  tweets.ipynb  users.ipynb
scrape_tweets/: 2_merge_collected_dataframes.py  3_data_stats.py  help_foos.py  tweets_scrapper.py
scrape_users/: scraping_followers_network.py
scripts/: mkdirs.sh
src/: clean_tweets.py  fileio.py  keyword_diacritics.py  modul.py  run.py  scrape_tweets.py  scrape_user_ids.py  scrape_user_objs.py  scrape_users.py  script.py  settings.py  tweets-by-month.eps  utils.py
tests/: test_scrape.py
twitter_scraper/: __init__.py  __main__.py  __version__.py  settings.py  version.json
(+518 files in other folders)
